bug fixing & send achieve of routes to telegram